@@ -6,9 +6,18 @@ Changes in Release 1.0.10
 * added renderFacetsIfSinglePage to x:dataScroller
 * aliasBean : avoid evaluating expressions on each phase
 * added aliasBeansScope tag to make configuration with multiple aliasBean easier to manage.
+* added displayValueOnly functionality which renders input components as if they were output components when this attribute is set to true, works on most extended components.
+* added forceId to many more of the extended components
+* closed MYFACES-13
+* closed MYFACES-34
+* closed MYFACES-84
+* closed MYFACES-147
 * closed MYFACES-177
+* closed MYFACES-180
+* closed MYFACES-181
 * closed MYFACES-199
 * closed MYFACES-209
+* closed MYFACES-234
 * closed MYFACES-241
 * closed MYFACES-242
 ----------------------------------------------------------------------
